fixed text overflow bug on template preview page

--- a/src/assets/styles/docInvoice.scss
+++ b/src/assets/styles/docInvoice.scss
@@ -20,12 +20,6 @@
       max-width: 100%;
       display: inline-block;
       margin: 0 auto;
-
-      &__text {
-        word-wrap: break-word;
-        white-space: nowrap;
-        overflow-x: auto;
-      }
     }
   }
 
